# tomosona

./: CHANGELOG.md  Makefile  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: START_HERE.md
docs/design/: 03_properties.md  05_semantic_search_and_cosmos.md  06_second_brain.md  07_echoes.md  08_pulse.md  11_testing_guide.md
scripts/: prepare-version.sh
src/: App.constituted-context.test.ts  App.cosmos.test.ts  App.favorites.test.ts  App.multi-pane.test.ts  App.second-brain-context.test.ts  App.settings.test.ts  App.shell-flows.test.ts  App.shell.contract.test.ts  App.theme.contract.test.ts  App.vue  main.ts  themeTypography.contract.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: BACKEND_INDEX_ARCHITECTURE.md  alter_exploration.rs  alters.rs  echoes.rs  editor_sync.rs  favorites.rs  fs_ops.rs  index_schema.rs  lib.rs  markdown_index.rs  search_index.rs  semantic.rs  settings.rs  wikilink_graph.rs  workspace_paths.rs  workspace_runtime.rs  workspace_watch.rs
src-tauri/src/docx/: conversion.rs  default_style.rs  mod.rs  style_from_docx.rs
src-tauri/src/second_brain/: SECOND_BRAIN_ARCHITECTURE.md  config.rs  context.rs  draft.rs  draft_publish.rs  frontmatter_generation.rs  llm.rs  message_flow.rs  mod.rs  modes.rs  openai_codex.rs  paths.rs  prompt_builder.rs  pulse_flow.rs  session_store.rs  stream_control.rs
src/app/: ARCHITECTURE.md  App.vue
src/assets/: tailwind.css  theme-tokens.css
src/components/: EditorRightPane.test.ts  EditorRightPane.vue  EditorView.vue  PulsePanel.vue
src/composables/: useAppIndexingController.test.ts  useAppIndexingController.ts  useAppModalController.test.ts  useAppModalController.ts  useAppNavigationController.test.ts  useAppNavigationController.ts  useAppQuickOpen.test.ts  useAppQuickOpen.ts  useAppSecondBrainBridge.test.ts  useAppSecondBrainBridge.ts  useAppTheme.test.ts  useAppTheme.ts  useAppWorkspaceController.ts  useCosmosController.test.ts  useCosmosController.ts  useDocumentHistory.ts  useEchoesDiscoverability.ts  useEchoesPack.test.ts  useEchoesPack.ts  useEditorInputHandlers.test.ts  useEditorInputHandlers.ts  useEditorSlashInsertion.ts  useInlineFormatToolbar.test.ts  useInlineFormatToolbar.ts  useMultiPaneWorkspaceState.test.ts  useMultiPaneWorkspaceState.ts  usePulseTransformation.ts  useSecondBrainAtMentions.test.ts  (+6 more)
(+481 files in other folders)
