[package]
name = "tomosona"
version = "0.16.5"
description = "Local-first markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "tomosona_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
rfd = "0.15"
open = "5"
notify = "6"
ignore = "0.4"
fastembed = "5"
sqlite-vec = "0.1.6"
unicode-normalization = "0.1"
genai = "0.5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
base64 = "0.22"
