[package]
name = "tomosona"
version = "0.22.5"
description = "Local-first markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "tomosona_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.38", features = ["bundled"] }
directories = "6"
rfd = "0.17"
open = "5"
notify = "8"
notify-debouncer-full = "0.7.0"
ignore = "0.4"
fastembed = "5.12.1"
sqlite-vec = "0.1.7"
unicode-normalization = "0.1"
genai = "0.5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
base64 = "0.22"
atomicwrites = "0.4.4"
blake3 = "1.8.3"
